--- a/main.css
+++ b/main.css
@@ -22,9 +22,35 @@
   src: url('/assets/fonts/suit/SUIT-Bold.woff2') format('woff2');
 }
 
-* {
+.highlight {
+  position: relative;
+}
+
+.highlight::before {
+  /* Highlight color */
+  background-color: rgba(92, 124, 250, 0.4);
+
+  content: '';
+  position: absolute;
+  width: calc(100% + 4px);
+  height: 40%;
+  left: -2px;
+  bottom: 0;
+  z-index: -1;
+  transform: rotate(-1deg);
+}
+
+body {
+  background-color: #fcfcfc;
+}
+
+body {
   font-family: SUIT, sans-serif;
   color: #212529;
+}
+
+body > .content {
+  margin-top: 120px;
 }
 
 a {
@@ -32,15 +58,30 @@ a {
   text-decoration: none;
 }
 
-header {
-  user-select: none;
-  padding: 0 1em;
-  margin: 1em 0;
-}
-
 section {
   padding: 0 1em;
   margin: 4em 0;
+}
+
+section > .header {
+  margin-bottom: 2em;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  user-select: none;
+  padding: 0 1em;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 60px;
+  background-color: rgba(255, 255, 255, 0.4);
+  z-index: 10;
+  backdrop-filter: blur(12px);
+  border-bottom: 1px solid #f1f3f5;
 }
 
 header .container {
@@ -50,16 +91,21 @@ header .container {
 }
 
 header .container .title {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
 header .container .sub {
   font-size: 0.9rem;
+  color: #868e96;
 }
 
 section.reserved {
-  margin-top: 3em;
+  text-align: center;
+  margin-top: 4em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 section.reserved .section {
   margin-bottom: 8px;
@@ -80,7 +126,7 @@ section.reserved .energy .wh {
 }
 
 section.reserved .check {
-  margin: 1.4em 0;
+  margin: 2em 0;
 }
 section.reserved .check .lable {
   padding: 6px 12px;
@@ -113,4 +159,30 @@ section.reserved .check .container .circle svg {
 }
 
 section.graph {
+  margin-bottom: 0;
+}
+
+section.compare {
+  margin-top: 2em;
+}
+section.compare .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1em 1em;
+  font-size: 1rem;
+}
+section.compare .container .header {
+  color: #495057;
+}
+section.compare .container .value .number {
+  font-weight: bold;
+  font-size: 1.4rem;
+}
+section.compare .container .value .wh {
+  color: #868e96;
+  font-weight: 600;
+}
+
+section.devices {
 }
