--- a/main.css
+++ b/main.css
@@ -71,17 +71,23 @@ section > .header {
 
 header {
   display: flex;
-  align-items: center;
   user-select: none;
   padding: 0 1em;
   position: fixed;
   top: 0;
-  width: 100%;
-  height: 60px;
+  width: 100vw;
   background-color: rgba(255, 255, 255, 0.4);
   z-index: 10;
+  -webkit-backdrop-filter: blur(12px);
   backdrop-filter: blur(12px);
   border-bottom: 1px solid #f1f3f5;
+}
+
+header .backdrop {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 60px;
 }
 
 header .container {
