--- a/main.css
+++ b/main.css
@@ -97,6 +97,7 @@ body {
 body {
   font-family: SUIT, sans-serif;
   color: #212529;
+  word-break: keep-all;
 }
 
 body > .content {
@@ -286,4 +287,59 @@ section.devices .card .icon img {
 }
 
 section.more {
+  margin: 8em 0;
+}
+
+section.more .container {
+  min-height: 200px;
+  margin: 0 1em;
+}
+section.more .container .box {
+  color: #f8f9fa;
+  padding: 2.4em 1.8em;
+  width: 100%;
+  height: 100%;
+  border-radius: 14px;
+  background-color: #212529;
+  box-shadow: 0px 0px 80px 2px #495057;
+}
+
+section.more .container .box .sub {
+  color: #adb5bd;
+}
+
+section.more .container .box .title {
+  font-size: 1.8rem;
+  margin: 0.6em 0;
+  font-weight: bold;
+  line-height: 140%;
+}
+section.more .container .box .button-box {
+  margin-top: 3.5em;
+}
+section.more .container .box .button-box a.button {
+  background-color: #f8f9fa;
+  margin: 4em 0;
+  padding: 0.5em 1.2em;
+  border-radius: 4px;
+  font-weight: bold;
+  transition: background-color 0.1s;
+}
+section.more .container .box .button-box a.button:hover {
+  background-color: #e9ecef;
+}
+
+footer .container {
+  color: #868e96;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3em 0;
+  padding: 0 3em;
+  gap: 10px;
+}
+
+footer .container .github a {
+  color: #868e96;
+  border-bottom: 1px dashed #000;
 }
